<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_enter_test"
        app:showAsAction="ifRoom"
        android:title="@string/enter_test"
        />
    <item
        android:id="@+id/action_new_word"
        app:showAsAction="never"
        android:title="@string/new_word"
        />
    <item
        android:id="@+id/action_study_count"
        app:showAsAction="never"
        android:title="@string/study_count"
        />
    <item
        android:id="@+id/action_find_word"
        app:showAsAction="never"
        android:title="@string/find_word"
        />
    <item
        android:id="@+id/action_system_setting"
        app:showAsAction="never"
        android:title="@string/system_setting"
        />
</menu>