<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/appearance_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:textColor="#FF69B4"
        android:id="@+id/textView51" />

    <TextView
        android:text="@string/placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@android:color/darker_gray"
        android:layout_marginTop="5dp"
        android:id="@+id/answer2"
        android:layout_below="@+id/textView55"
        android:layout_alignLeft="@+id/textView55"
        android:layout_alignStart="@+id/textView55" />

    <TextView
        android:text="@string/placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@android:color/darker_gray"
        android:layout_marginTop="5dp"
        android:id="@+id/answer3"
        android:layout_below="@+id/textView57"
        android:layout_alignLeft="@+id/textView57"
        android:layout_alignStart="@+id/textView57" />

    <TextView
        android:text="@string/placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@android:color/darker_gray"
        android:id="@+id/answer1"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/textView52"
        android:layout_alignLeft="@+id/textView52"
        android:layout_alignStart="@+id/textView52" />

    <TextView
        android:text="@string/word_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="#000000"
        android:id="@+id/textView52"
        android:clickable="true"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/textView51"
        android:layout_alignLeft="@+id/textView51"
        android:layout_alignStart="@+id/textView51" />

    <TextView
        android:text="@string/other_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:textColor="#FF69B4"
        android:id="@+id/textView54"
        android:layout_below="@+id/answer1"
        android:layout_alignLeft="@+id/answer1"
        android:layout_alignStart="@+id/answer1" />

    <TextView
        android:text="@string/test_word_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="#000000"
        android:id="@+id/textView55"
        android:clickable="true"
        android:layout_below="@+id/textView54"
        android:layout_alignLeft="@+id/textView54"
        android:layout_alignStart="@+id/textView54"
        android:layout_marginTop="22dp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@android:color/darker_gray"
        android:id="@+id/view"
        android:layout_below="@+id/answer2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp" />

    <TextView
        android:text="@string/if_stat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="#000000"
        android:id="@+id/textView57"
        android:layout_below="@+id/view"
        android:layout_alignLeft="@+id/answer2"
        android:layout_alignStart="@+id/answer2"
        android:layout_marginTop="15dp" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:background="@android:color/darker_gray"
        android:id="@+id/view2"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/answer3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="18dp"
        android:layout_marginEnd="18dp"
        android:id="@+id/checkBox"
        android:layout_alignBottom="@+id/answer3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>